# blender-mcp

./: .gitignore  README.md  addon.py  pyproject.toml
Bible/: .mcp.json.template  KB_SERVER.md  SYSTEM_PROMPT.md
Bible/Blender for 3d print documentation/: INDEX.md  INDEX.yaml  routing_rules.yaml
Bible/kb_ai3d/: INDEX.md  NEXT_DEEPSEARCH.md  RESEARCH_2026-05-13.md  WORKFLOW_END_TO_END.md  birefnet_workflow.md  ceramic_filaments.md  decision_tree.md  fdm_compatibility.md  workflow.md
Bible/playbooks/: remove_internal_faces_bvhtree.json  remove_internal_membrane_ao.json  select_linked_flat.json
MoldboxerStudy/: CLAUDE.md  FEATURES.md  INDEX.md  KNOWLEDGE_REVIEW_2026-05-13.md  NEXT_STEPS.md  RECONSTRUCTION.md
MoldboxerStudy/moldboxer_lite/: HOWTO.md  INTEGRATION.md  README.md  __init__.py  auto_box.py  auto_flat.py  channels.py  confirm.py  constants.py  export.py  modifiers.py  object_wrapper.py  preprocess.py  primitives.py  silicone_mold.py  split_and_base.py  voxel_size.py  wrapper.py
MoldboxerStudy/tools/: pyc_inspect.py  pyc_to_pseudo.py
PostProcessing/: INDEX.md
PostProcessing/01_layer_lines_smoothing/: 01_sanding_techniques.md  02_filler_primers_putty.md  03_chemical_smoothing_pla.md  04_epoxy_coatings.md  05_case_studies.md  _next_questions.md  _sources.md
PostProcessing/02_painting_and_primers/: 01_primers_comparison.md  02_topcoats_brands.md  03_application_techniques.md  04_special_effects.md  05_common_failures.md  06_case_studies.md  _next_questions.md  _sources.md
Workflow/: TESTING_LOG.md
src/blender_mcp/: server.py
(+161 files in other folders)
